--- a/style.css
+++ b/style.css
@@ -1,35 +1,68 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
     --colorful: rgb(122, 233, 174);
+    --cancel-color: rgb(255, 108, 108);
+    --toggle-color: rgb(122, 163, 233);
 }
 
 html {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
+
+.lib {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
 }
 
-button {
-    margin-top: 20px;
-    margin-left: 40vw;
-    padding: 12px 30px;
-    background-color: var(--colorful);
-    border:  none;
-    font-size: 15px;
-    border-radius: 10px;
+#main-button {
+  width: 190px;
+  padding: 12px 30px;
+  background-color: var(--colorful);
+  border:  none;
+  font-size: 15px;
+  border-radius: 10px;
 }
 
-button:hover {
+.buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+  justify-content: flex-end;
+}
+
+#cancel {
+  visibility: hidden;
+  width: 190px;
+  padding: 12px 30px;
+  background-color: var(--cancel-color);
+  border:  none;
+  font-size: 15px;
+  border-radius: 10px;
+}
+#main-button:hover {
     background-color: white;
     outline: 2px solid var(--colorful);
     cursor: pointer;
     font-weight: bold;
     color: var(--colorful);
+}
+
+#cancel:hover {
+  background-color: white;
+  outline: 2px solid var(--cancel-color);
+  cursor: pointer;
+  font-weight: bold;
+  color: var(--cancel-color);
 }
   
 table {
@@ -66,4 +99,47 @@ th {
 
 tbody tr:hover {
     border: 2px solid var(--colorful);
+}
+
+
+input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: rgb(245,245,245);
+  text-align: center;
+}
+
+
+
+form table {
+  margin-top: 10px;
+  visibility: hidden;
+}
+
+form td {
+  padding: 0;
+  height: 30px;
+}
+
+form tr:hover {
+  border: none;
+}
+
+select {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(245,245,245);
+  border: none;
+  text-align: center;
+}
+
+.remove-book {
+  width: 20px;
+  height: 20px;
+  color: white;
+  background-color: var(--cancel-color);
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
 }
